--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site wide configuration
 
-title:
-description:
-logo: # 120x120 px default image used for Twitter summary card
-teaser: # 400x250 px default teaser image used in image archive grid
+title:			Crowdsourcing Volcanic Data Creation in Indonesia
+description: 	For Disaster Resiliance 
+logo:			http://i.imgur.com/fIIA5jJ.png # 120x120 px default image used for Twitter summary card
+teaser: 		teaser.jpg # 400x250 px default teaser image used in image archive grid
 locale:
 url:
 
@@ -21,8 +21,8 @@ gems:
 
 # Site owner
 owner:
-  name:
-  email:
+  name: 		OFDA GIU
+  email:		ofdagiu@ofda.gov
   twitter:
   google:
     ad-client: 
