crops down india map

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,11 @@
 # Site navigation links
 
+- title: Intro
+  url: /
+  excerpt:
+  image:
+
 - title: Overview
-  url: /Overview/
+  url: /overview/
   excerpt:
   image:
