--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,10 +7,10 @@
 
 - title: Overview
   url: /overview/
-  excerpt:
+  excerpt: A summary of the problems associated with missing data.
   image:
 
 - title: Guide
   url: /guide/
-  excerpt:
+  excerpt: An OpenStreetMap guide to mapping around Indonesian volcanoes.
   image:
