--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@
   image:
 
 - title: Indonesia
-  url: /overview/
+  url: /indonesia/
   excerpt: A summary of the missing data surrounding Indonesian volcanoes.
   image:
 
