still trying to get image to show

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title:		Living-Garden
 logo:			 # 120x120 px default image used for Twitter summary card
 teaser: 		teaser.jpg # 400x250 px default teaser image used in image archive grid
 locale: 
-url: Living-Garden
+url: 
 
 # Jekyll configuration
 
